fix link overlap in commands popup

--- a/web/static/css/default.css
+++ b/web/static/css/default.css
@@ -243,7 +243,7 @@ body {
   opacity: 0.2;
   position: absolute;
   top: 14px;
-  left: 150px;
+  left: 350px;
   z-index: 99999;
 }
 
